# personal_beauty

person_beauty_plugin/: .gitignore  CMakeLists.txt
person_beauty_plugin/src/: main.cpp
person_beauty_plugin/src/AI/: FaceDetector.cpp  FaceDetector.h  FaceLandmarkModel.cpp  FaceLandmarkModel.h  InferenceEngine.cpp  InferenceEngine.h  ParsingModel.cpp  ParsingModel.h  SegmentationModel.cpp  SegmentationModel.h
person_beauty_plugin/src/Core/: Core.cpp  ImageBuffer.h
person_beauty_plugin/src/Network/: GenAPIClient.cpp  GenAPIClient.h
person_beauty_plugin/src/Processing/: ColorEngine.cpp  ColorEngine.h  LiquifyEngine.cpp  LiquifyEngine.h  MaskProcessor.cpp  MaskProcessor.h
scripts/: download_models.py
